Add some documentation and make jar executable